recursion.cons.occurrences.Occurrences.scala.error
Erreur de compilation :
Occurrences:7: error: not found: value occurences
      return(occurences(l.tail,v)+1);
             ^Occurrences:9: error: not found: value occurences
      return(occurences(l.tail,v));
             ^