recursion.cons.occurrences.Occurrences.scala.code
def occurrences(l:List[Int], v:Int): Int = {
  if (l==Nil){
    return(0);
  }else{
    if (l.head==v){
      return(occurences(l.tail,v)+1);
    }else{
      return(occurences(l.tail,v));
    }
  }
}